css/style.scss
/* ... */
.all-posts {
	margin-left: 0px;
	margin-right: 0px;

	@media (min-width: $screen-sm-min) {
		#search-container {
			padding-top: 75px;
			padding-bottom: 150px;
		}
	}

	@media (min-width: $screen-md-min) {
		margin-left: -15px;
		margin-right: -15px;

		#search-container {
			padding-bottom: 300px;
		}
	}

	#search-input {
		position:relative;
		width: 100%;
		padding:6px 15px 6px 30px;
		margin: 2px;
		margin-top: 50px;

		color:$dark;
		background-color:$white;

		border:1px solid #adc5cf;
		border-radius:15px;
		-moz-border-radius:15px;
		-webkit-border-radius:15px;
	}

	#search-input:focus {
		outline: none;
  }

	.content-panel {
		padding-left: 10px;
		padding-right: 10px;
		@media (min-width: $screen-md-min) {
			padding-left: 30px;
			padding-right: 30px;
		}
	}
}


.single {
	height:100%;
	max-height: 100%;

	h1, h2, h3, h4, h5, h6 {
		font-family: 'Montserrat', sans-serif;
		margin-bottom: 10px;
	}

	h2 {
		font-size: 36px;
	}

	h3 {
		font-size: 28px;
	}

	p {
		margin-bottom: 10px;

		@media (min-width: $screen-sm-min) {
			margin-bottom: 40px;
		}
	}

	.menu {

		background-color: $dark-blue;

		a, a:active {
			color: $white;
		}

		a:hover {
			color: $dark-green;
		}

		h4 {
			margin-top: 20px;
		}

		.share {
			margin-top: 20px;

			h4 {
				margin-bottom: 10px;
			}
		}

		.home {
			margin-top: 10px;
			font-size: 16px;

			a {
				color: $white;
			}
		}

		.related {
			ul {
				padding: 0px;
			}
			li {
				margin-bottom: 10px;
			}
		}
	}

	.article {
		width: 100%;
		margin-left: 0%;
		padding: 0px;

		@media (min-width: $screen-sm-min) {
			width: 90%;
			margin-left: 5%;
		}

		@media (min-width: $screen-md-min) {
			width: 70%;
			margin-left: 15%;
		}

		@media (min-width: $screen-lg-min) {
			width: 50%;
			margin-left: 25%;
		}

		.thumb {
			margin-top: 20px;
			margin-bottom: 0px;
			text-align: center;

			img {
				height: 50px;
				@media (min-width: $screen-sm-min) {
					height: 70px;
				}
			}
		}

		.author {
			font-size: 20px;
			text-align: center;
			margin-bottom: 0px;
		}

		.read-time {
			font-size: 16px;
			text-align: center;
			margin-bottom: 10px;
			font-weight: 400;
			@media (min-width: $screen-sm-min) {
				margin-bottom: 40px;
			}
		}

		.content {
			font-size: 18px;
			line-height: 170%;
			padding-left: 15px;
			padding-right: 15px;
			padding-top: 10px;
			padding-bottom: 10px;

			@media (min-width: $screen-sm-min) {
				font-size: 24px;
				padding-left: 30px;
				padding-right: 30px;
				padding-top: 40px;
				padding-bottom: 20px;
			}

			.series {
				margin-bottom: 50px;
			}

			img {
				max-width: 100%;
				padding: 10px;
    		display: block;
    		margin-left: auto;
    		margin-right: auto
			}

			ul {
				list-style-type: disc;
			}

            		ol {
				list-style-type: decimal;
			}

			blockquote {
				position: relative;
				width: 100%;
		    margin-left: -15px;
				padding-right: 10px;
				background-color: $darker;
				color: white;
				box-sizing: content-box;
				border: none;
				font-size: 28px;

				@media (min-width: $screen-sm-min) {
					margin-left: -30px;
					padding-left: 45px;
					padding-right: 15px;
				}

				p {
			    margin: 0;
			    padding: 15px;
					z-index: 0;
				}

				:before {
    			font-family: "Times New Roman";
					color: $light-medium;
			    content: "“";
			    position: absolute;
			    top: 15px;
			    left: 15px;
			    font-size: 65px;
			    font-weight: bold;
				}

			}

			.alignright {
				float: right;
			}

			.aligncenter {
			    display: block;
			    margin: 5px auto 5px auto;
			}

			figure.highlight, div.highlighter-rouge {
				width: 100%;
				margin-left: -15px;
				padding-right: 10px;
				box-sizing: content-box;

				@media (min-width: $screen-sm-min) {
					margin-left: -30px;
					padding-right: 60px;
				}

				pre {
					width: 100%;
					font-family: 'Anonymous Pro';
					background-color: $darker;
					color: $white;
					font-size: 12px;
					border: none;
					padding-left: 15px;
					padding-top: 20px;
					padding-bottom: 20px;
					padding-right: 15px;
					box-sizing: content-box;
					border-radius: 0;
					margin-bottom: 10px;
					margin-top: 10px;

					@media (min-width: $screen-sm-min) {
						padding-left: 50px;
						padding-right: 10px;
						margin-bottom: 40px;
						font-size: 15px;
					}
				}
			}

			p, ul, ol {

				code {
					font-family: 'Anonymous Pro';
					font-size: 15px;
					background-color: $darker;
					color: $white;
					padding: 0.5em;
					vertical-align: middle;
				}

			}

			.tags {
				margin-top: 10px;
				margin-bottom: 10px;
				text-align: center;

				a, a:active {
					color: $white;
				}

				a:hover {
					color: $dark-green;
				}

			}

			.share {
				margin-top: 20px;
				margin-bottom: 10px;
				text-align: center;

			}

		}

		.feedback {
			text-align: center;

			.fa-heart {
				color: $red;
			}

		}

		.comments {
		}

	}
}

.related {
	margin-top: 50px;
	text-align: center;

	.related-header {
		margin-top: -30px;
		margin-bottom: 20px;

		a {
			color: $white;
			font-size: 18px;
			width: auto;
			padding: 10px 20px;
			background-color: $darker;
			box-shadow: 0px 0px 0px 0px, 0px 6px 12px rgba(0, 0, 0, 0.2);
		}

		a:hover {
			color: $dark-blue;
		}
	}

	.title {
		padding-top:20px;
		font-size: 24px;
		margin-bottom: 20px;

		@media (min-width: $screen-sm-min) {
			font-size: 36px;
		}

		a {
			color: $white;
		}

		a:hover {
			color: $light;
		}
	}

	p {
		margin-bottom: 0px;
	}

	.previous-next {
		width: 50%;

		a {
			color: $white;
		}

		a:hover {
			color: $light;
		}
	}

	.next {
		float: right;
		text-align: right;
	}

	.previous {
		float: left;
		text-align: left;
	}

	.date {
		color: $light-medium;
	}
}

.search-hr {
	width: 700px;
	border-color: $light-medium;
}

.error {
	.error-text {
		margin-top: 30px;

		a {
			color: $dark-green;
		}
	}

	.links {
		font-size: 1em;
	}
}
/* ... */

